feat: add adaptive menu

--- a/shelter/pages/pets/index.html
+++ b/shelter/pages/pets/index.html
@@ -10,152 +10,160 @@
     <script type="module" src="script.js" defer></script>
 </head>
 <body>
-    <header class="header header_sticky">
-        <div class="wrapper">
-            <div class="header__container header__container_our-pets-page">
-                <a href="../main/index.html" class="logo-link">
-                    <div class="logo">
-                        <p class="logo__title logo__title_dark">Cozy House</p>
-                        <p class="logo__subtitle logo__subtitle_dark">Shelter for pets in Boston</p>
-                    </div>
-                </a>
-                <nav class="nav">
-                    <ul class="nav__list">
-                        <li class="nav__item nav__item_dark"><a href="../main/index.html" class="nav__link">About the shelter</a></li>
-                        <li class="nav__item nav__item_dark nav__item_dark_active"><a href="#" class="nav__link">Our pets</a></li>
-                        <li class="nav__item nav__item_dark"><a href="../main/#donation" class="nav__link">Help the shelter</a></li>
-                        <li class="nav__item nav__item_dark"><a href="#footer" class="nav__link">Contacts</a></li>
-                    </ul>
-                </nav>
-            </div>
-        </div>
-    </header>
-    <main>
-        <section class="our-friends">
+    <div class="container">
+        <div class="backdrop"></div>
+        <header class="header header_sticky">
             <div class="wrapper">
-                <div class="our-friends__container our-friends__container_our-pets-page">
-                    <h1 class="section-title section-title_center">Our friends who<br>are looking for a house</h1>
-                    <div class="pets pets_our-pets-page">
-                        <div class="pet">
-                            <div class="pet__cover">
-                                <img src="../../assets/images/our-friends/pets-katrine.png" alt="Katrine" class="pet__img">
-                            </div>
-                            <div class="pet__content">
-                                <h3>Katrine</h3>
-                                <button class="button button-oval button-bordered">Learn more</button>
-                            </div>
+                <div class="header__container header__container_our-pets-page">
+                    <a href="../main/index.html" class="logo-link">
+                        <div class="logo">
+                            <p class="logo__title logo__title_dark">Cozy House</p>
+                            <p class="logo__subtitle logo__subtitle_dark">Shelter for pets in Boston</p>
                         </div>
-                        <div class="pet">
-                            <div class="pet__cover">
-                                <img src="../../assets/images/our-friends/pets-jennifer.png" alt="Jennifer" class="pet__img">
-                            </div>
-                            <div class="pet__content">
-                                <h3>Jennifer</h3>
-                                <button class="button button-oval button-bordered">Learn more</button>
-                            </div>
-                        </div>
-                        <div class="pet">
-                            <div class="pet__cover">
-                                <img src="../../assets/images/our-friends/pets-woody.png" alt="Woody" class="pet__img">
-                            </div>
-                            <div class="pet__content">
-                                <h3>Woody</h3>
-                                <button class="button button-oval button-bordered">Learn more</button>
-                            </div>
-                        </div>
-                        <div class="pet">
-                            <div class="pet__cover">
-                                <img src="../../assets/images/our-friends/pets-sophia.jpg" alt="Sophia" class="pet__img">
-                            </div>
-                            <div class="pet__content">
-                                <h3>Sophia</h3>
-                                <button class="button button-oval button-bordered">Learn more</button>
-                            </div>
-                        </div>
-                        <div class="pet">
-                            <div class="pet__cover">
-                                <img src="../../assets/images/our-friends/pets-timmy.png" alt="Timmy" class="pet__img">
-                            </div>
-                            <div class="pet__content">
-                                <h3>Timmy</h3>
-                                <button class="button button-oval button-bordered">Learn more</button>
-                            </div>
-                        </div>
-                        <div class="pet">
-                            <div class="pet__cover">
-                                <img src="../../assets/images/our-friends/pets-charly.jpg" alt="Charly" class="pet__img">
-                            </div>
-                            <div class="pet__content">
-                                <h3>Charly</h3>
-                                <button class="button button-oval button-bordered">Learn more</button>
-                            </div>
-                        </div>
-                        <div class="pet">
-                            <div class="pet__cover">
-                                <img src="../../assets/images/our-friends/pets-scarlet.png" alt="Scarlet" class="pet__img">
-                            </div>
-                            <div class="pet__content">
-                                <h3>Scarlet</h3>
-                                <button class="button button-oval button-bordered">Learn more</button>
-                            </div>
-                        </div>
-                        <div class="pet">
-                            <div class="pet__cover">
-                                <img src="../../assets/images/our-friends/pets-freddie.png" alt="Freddie" class="pet__img">
-                            </div>
-                            <div class="pet__content">
-                                <h3>Freddie</h3>
-                                <button class="button button-oval button-bordered">Learn more</button>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="controllers">
-                        <button class="button button-round button-bordered button_inactive button_prev-prev">&lt;&lt;</button>
-                        <button class="button button-round button-bordered button_inactive button_prev">&lt;</button>
-                        <button class="button button-round button_active">1</button>
-                        <button class="button button-round button-bordered button_prev">&gt;</button>
-                        <button class="button button-round button-bordered button_next-next">&gt;&gt;</button> <!--Maybe &#10142;-->  
+                    </a>
+                    <nav class="nav">
+                        <ul class="nav__list">
+                            <li class="nav__item nav__item_dark"><a href="../main/index.html" class="nav__link">About the shelter</a></li>
+                            <li class="nav__item nav__item_dark nav__item_dark_active"><a href="#" class="nav__link">Our pets</a></li>
+                            <li class="nav__item nav__item_dark"><a href="../main/#donation" class="nav__link">Help the shelter</a></li>
+                            <li class="nav__item nav__item_dark"><a href="#footer" class="nav__link">Contacts</a></li>
+                        </ul>
+                    </nav>
+                    <div class="hamburger">
+                        <span class="line line_dark"></span>
+                        <span class="line line_dark"></span>
+                        <span class="line line_dark"></span>
                     </div>
                 </div>
             </div>
-        </section>
-    </main>
-    <footer class="footer" id="footer">
-        <div class="wrapper">
-            <div class="footer__container">
-                <div class="footer__content footer__content_contacts">
-                    <h2 class="section-title footer__section-title">For questions<br>and suggestions</h2>
-                    <a href="mailto:email@shelter.com">
-                        <div class="footer-item">
-                            <img src="../../assets/icons/footer-icons/icon-email.svg" alt="email" class="footer-item__icon" height="32px">
-                            email@shelter.com
+        </header>
+        <main>
+            <section class="our-friends">
+                <div class="wrapper">
+                    <div class="our-friends__container our-friends__container_our-pets-page">
+                        <h1 class="section-title section-title_center">Our friends who<br>are looking for a house</h1>
+                        <div class="pets pets_our-pets-page">
+                            <div class="pet">
+                                <div class="pet__cover">
+                                    <img src="../../assets/images/our-friends/pets-katrine.png" alt="Katrine" class="pet__img">
+                                </div>
+                                <div class="pet__content">
+                                    <h3>Katrine</h3>
+                                    <button class="button button-oval button-bordered">Learn more</button>
+                                </div>
+                            </div>
+                            <div class="pet">
+                                <div class="pet__cover">
+                                    <img src="../../assets/images/our-friends/pets-jennifer.png" alt="Jennifer" class="pet__img">
+                                </div>
+                                <div class="pet__content">
+                                    <h3>Jennifer</h3>
+                                    <button class="button button-oval button-bordered">Learn more</button>
+                                </div>
+                            </div>
+                            <div class="pet">
+                                <div class="pet__cover">
+                                    <img src="../../assets/images/our-friends/pets-woody.png" alt="Woody" class="pet__img">
+                                </div>
+                                <div class="pet__content">
+                                    <h3>Woody</h3>
+                                    <button class="button button-oval button-bordered">Learn more</button>
+                                </div>
+                            </div>
+                            <div class="pet">
+                                <div class="pet__cover">
+                                    <img src="../../assets/images/our-friends/pets-sophia.jpg" alt="Sophia" class="pet__img">
+                                </div>
+                                <div class="pet__content">
+                                    <h3>Sophia</h3>
+                                    <button class="button button-oval button-bordered">Learn more</button>
+                                </div>
+                            </div>
+                            <div class="pet">
+                                <div class="pet__cover">
+                                    <img src="../../assets/images/our-friends/pets-timmy.png" alt="Timmy" class="pet__img">
+                                </div>
+                                <div class="pet__content">
+                                    <h3>Timmy</h3>
+                                    <button class="button button-oval button-bordered">Learn more</button>
+                                </div>
+                            </div>
+                            <div class="pet">
+                                <div class="pet__cover">
+                                    <img src="../../assets/images/our-friends/pets-charly.jpg" alt="Charly" class="pet__img">
+                                </div>
+                                <div class="pet__content">
+                                    <h3>Charly</h3>
+                                    <button class="button button-oval button-bordered">Learn more</button>
+                                </div>
+                            </div>
+                            <div class="pet">
+                                <div class="pet__cover">
+                                    <img src="../../assets/images/our-friends/pets-scarlet.png" alt="Scarlet" class="pet__img">
+                                </div>
+                                <div class="pet__content">
+                                    <h3>Scarlet</h3>
+                                    <button class="button button-oval button-bordered">Learn more</button>
+                                </div>
+                            </div>
+                            <div class="pet">
+                                <div class="pet__cover">
+                                    <img src="../../assets/images/our-friends/pets-freddie.png" alt="Freddie" class="pet__img">
+                                </div>
+                                <div class="pet__content">
+                                    <h3>Freddie</h3>
+                                    <button class="button button-oval button-bordered">Learn more</button>
+                                </div>
+                            </div>
                         </div>
-                    </a>    
-                    <a href="tel:+136745677554">
-                        <div class="footer-item">
-                            <img src="../../assets/icons/footer-icons/icon-phone.svg" alt="tel" class="footer-item__icon" height="32px">
-                            +13 674 567 75 54
+                        <div class="controllers">
+                            <button class="button button-round button-bordered button_inactive button_prev-prev">&lt;&lt;</button>
+                            <button class="button button-round button-bordered button_inactive button_prev">&lt;</button>
+                            <button class="button button-round button_active">1</button>
+                            <button class="button button-round button-bordered button_prev">&gt;</button>
+                            <button class="button button-round button-bordered button_next-next">&gt;&gt;</button> <!--Maybe &#10142;-->  
                         </div>
-                    </a>  
+                    </div>
                 </div>
-                <div class="footer__content footer__content_address">
-                    <h2 class="section-title footer__section-title">We are waiting<br>for your visit</h2>
-                    <a href="https://www.google.com/maps/d/viewer?ie=UTF8&t=m&oe=UTF8&msa=0&err=1&mid=1PLqFkyn7STjHhvQNO1j0eAaDoAo&ll=50.086462981220194%2C14.412590779436302&z=17" target="_blank">
-                        <div class="footer-item">
-                            <img src="../../assets/icons/footer-icons/icon-marker.svg" alt="location" class="footer-item__icon" height="32px">
-                            1 Central Street, Boston<br>(entrance from the store)
-                        </div>
-                    </a>
-                    <a href="https://www.google.com/maps/d/viewer?ie=UTF8&t=m&oe=UTF8&msa=0&err=1&mid=1PLqFkyn7STjHhvQNO1j0eAaDoAo&ll=50.086462981220194%2C14.412590779436302&z=17" target="_blank">
-                        <div class="footer-item">
-                            <img src="../../assets/icons/footer-icons/icon-marker.svg" alt="location" class="footer-item__icon" height="32px">
-                            18 South Park, London
-                        </div>
-                    </a>
+            </section>
+        </main>
+        <footer class="footer" id="footer">
+            <div class="wrapper">
+                <div class="footer__container">
+                    <div class="footer__content footer__content_contacts">
+                        <h2 class="section-title footer__section-title">For questions<br>and suggestions</h2>
+                        <a href="mailto:email@shelter.com">
+                            <div class="footer-item">
+                                <img src="../../assets/icons/footer-icons/icon-email.svg" alt="email" class="footer-item__icon" height="32px">
+                                email@shelter.com
+                            </div>
+                        </a>    
+                        <a href="tel:+136745677554">
+                            <div class="footer-item">
+                                <img src="../../assets/icons/footer-icons/icon-phone.svg" alt="tel" class="footer-item__icon" height="32px">
+                                +13 674 567 75 54
+                            </div>
+                        </a>  
+                    </div>
+                    <div class="footer__content footer__content_address">
+                        <h2 class="section-title footer__section-title">We are waiting<br>for your visit</h2>
+                        <a href="https://www.google.com/maps/d/viewer?ie=UTF8&t=m&oe=UTF8&msa=0&err=1&mid=1PLqFkyn7STjHhvQNO1j0eAaDoAo&ll=50.086462981220194%2C14.412590779436302&z=17" target="_blank">
+                            <div class="footer-item">
+                                <img src="../../assets/icons/footer-icons/icon-marker.svg" alt="location" class="footer-item__icon" height="32px">
+                                1 Central Street, Boston<br>(entrance from the store)
+                            </div>
+                        </a>
+                        <a href="https://www.google.com/maps/d/viewer?ie=UTF8&t=m&oe=UTF8&msa=0&err=1&mid=1PLqFkyn7STjHhvQNO1j0eAaDoAo&ll=50.086462981220194%2C14.412590779436302&z=17" target="_blank">
+                            <div class="footer-item">
+                                <img src="../../assets/icons/footer-icons/icon-marker.svg" alt="location" class="footer-item__icon" height="32px">
+                                18 South Park, London
+                            </div>
+                        </a>
+                    </div>
+                    <img src="../../assets/images/footer-puppy.png" alt="footer-dog" class="footer__image" width="300px">
                 </div>
-                <img src="../../assets/images/footer-puppy.png" alt="footer-dog" class="footer__image" width="300px">
             </div>
-        </div>
-    </footer>
+        </footer>
+    </div>
 </body>
 </html>
