--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -171,7 +171,7 @@
                         <div class="donation__content">
                             <h2 class="section-title">You can also<br>make a donation</h2>
                             <h5>Name of the bank / Type of bank account</h5>
-                            <a href="javascript:void(0)"><input type="tel" inputmode="numeric" pattern="[0-9\s]{13,19}" autocomplete="cc-number" maxlength="24" placeholder="8380 2880 8028 8791 7435" class="card-input"></a>
+                            <a href="javascript:void(0)" class="card-input-link"><input type="tel" inputmode="numeric" pattern="\d*" autocomplete="cc-number" maxlength="24" placeholder="8380 2880 8028 8791 7435" class="card-input"></a>
                             <p class="footnote">
                                 Legal information and lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas a ipsum at libero sagittis dignissim sed ac diam. Praesent ultrices maximus tortor et vulputate. Interdum et malesuada fames ac ante ipsum primis in faucibus.
                             </p>
