feat: add modal layout

--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -11,7 +11,6 @@
 </head>
 <body>
     <div class="container">
-        <div class="backdrop"></div>
         <div class="gradient">
             <header class="header">
                 <div class="wrapper">
@@ -118,6 +117,27 @@
                         </a>
                     </div>
                 </div>
+                <div class="modal">
+                    <div class="modal__container">
+                        <img src="../../assets/images/our-friends/pets-jennifer.png" alt="Jennifer" class="modal__img">
+                        <div class="modal__content">
+                            <div class="modal-head">
+                                <h2 class="modal-head__title" data-modal="name">Jennifer</h2>
+                                <h4 class="modal-head__subtitle"><span data-modal="type">Dog</span> - <span data-modal="breed">Labrador</span></h4>
+                            </div>
+                            <p class="modal__text" data-modal="description">
+                                Jennifer is a sweet 2 months old Labrador that is patiently waiting to find a new forever home. This girl really enjoys being able to go outside to run and play, but won't hesitate to play up a storm in the house if she has all of her favorite toys.
+                            </p>
+                            <ul class="modal-list">
+                                <li class="modal-list__item"><span class="modal-list__text"><b>Age: </b><span data-modal="age">2 month</span></span></li>
+                                <li class="modal-list__item"><span class="modal-list__text"><b>Inoculations: </b><span data-modal="inoculations">none</span></span></li>
+                                <li class="modal-list__item"><span class="modal-list__text"><b>Diseases: </b><span data-modal="diseases">none</span></span></li>
+                                <li class="modal-list__item"><span class="modal-list__text"><b>Parasites: </b><span data-modal="parasites">none</span></span></li>
+                            </ul>
+                        </div>
+                        <button class="button button-round button-bordered modal__close-button">&#10006;</button>
+                    </div>
+                </div>
             </section>
             <section class="help">
                 <div class="wrapper">
@@ -217,6 +237,7 @@
                 </div>
             </div>
         </footer>
+        <div class="backdrop"></div>
     </div>
 </body>
 </html>
