feat: add modal window functionality

--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -119,21 +119,23 @@
                 </div>
                 <div class="modal">
                     <div class="modal__container">
-                        <img src="../../assets/images/our-friends/pets-jennifer.png" alt="Jennifer" class="modal__img">
-                        <div class="modal__content">
-                            <div class="modal-head">
-                                <h2 class="modal-head__title" data-modal="name">Jennifer</h2>
-                                <h4 class="modal-head__subtitle"><span data-modal="type">Dog</span> - <span data-modal="breed">Labrador</span></h4>
+                        <div class="modal__cover">
+                            <img src="../../assets/images/our-friends/pets-jennifer.png" alt="Jennifer" class="modal__img">
+                        </div>
+                        <div class="modal__content-container">
+                            <div class="modal__content">
+                                <div class="modal-head">
+                                    <h2 class="modal-head__title" data-modal="name"></h2>
+                                    <h4 class="modal-head__subtitle"><span data-modal="type"></span> - <span data-modal="breed"></span></h4>
+                                </div>
+                                <p class="modal__text" data-modal="description"></p>
+                                <ul class="modal-list">
+                                    <li class="modal-list__item"><span class="modal-list__text"><b>Age: </b><span data-modal="age"></span></span></li>
+                                    <li class="modal-list__item"><span class="modal-list__text"><b>Inoculations: </b><span data-modal="inoculations"></span></span></li>
+                                    <li class="modal-list__item"><span class="modal-list__text"><b>Diseases: </b><span data-modal="diseases"></span></span></li>
+                                    <li class="modal-list__item"><span class="modal-list__text"><b>Parasites: </b><span data-modal="parasites"></span></span></li>
+                                </ul>
                             </div>
-                            <p class="modal__text" data-modal="description">
-                                Jennifer is a sweet 2 months old Labrador that is patiently waiting to find a new forever home. This girl really enjoys being able to go outside to run and play, but won't hesitate to play up a storm in the house if she has all of her favorite toys.
-                            </p>
-                            <ul class="modal-list">
-                                <li class="modal-list__item"><span class="modal-list__text"><b>Age: </b><span data-modal="age">2 month</span></span></li>
-                                <li class="modal-list__item"><span class="modal-list__text"><b>Inoculations: </b><span data-modal="inoculations">none</span></span></li>
-                                <li class="modal-list__item"><span class="modal-list__text"><b>Diseases: </b><span data-modal="diseases">none</span></span></li>
-                                <li class="modal-list__item"><span class="modal-list__text"><b>Parasites: </b><span data-modal="parasites">none</span></span></li>
-                            </ul>
                         </div>
                         <button class="button button-round button-bordered modal__close-button">&#10006;</button>
                     </div>
