feat: add pagination

--- a/shelter/pages/pets/index.html
+++ b/shelter/pages/pets/index.html
@@ -117,11 +117,11 @@
                             </div>
                         </div>
                         <div class="controllers">
-                            <button class="button button-round button-bordered button_inactive button_prev-prev">&lt;&lt;</button>
-                            <button class="button button-round button-bordered button_inactive button_prev">&lt;</button>
-                            <button class="button button-round button_active">1</button>
-                            <button class="button button-round button-bordered button_next">&gt;</button>
-                            <button class="button button-round button-bordered button_next-next">&gt;&gt;</button> <!--Maybe &#10142;-->  
+                            <button class="button button-round button-bordered button_inactive button_first-page">&lt;&lt;</button>
+                            <button class="button button-round button-bordered button_inactive button_prev-page">&lt;</button>
+                            <button class="button button-round button_active current-page">1</button>
+                            <button class="button button-round button-bordered button_next-page">&gt;</button>
+                            <button class="button button-round button-bordered button_last-page">&gt;&gt;</button> <!--Maybe &#10142;-->  
                         </div>
                     </div>
                 </div>
